--- a/.gitignore
+++ b/.gitignore
@@ -162,4 +162,7 @@ buildNumber.properties
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
+#Ignore .curl script
+*.bat
+
 # End of https://www.toptal.com/developers/gitignore/api/intellij,java,maven
