--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,6 @@
 .idea/**/dictionaries
 .idea/**/shelf
 
-#Ignore .properties file with sensitive information
-src/main/resources/config.properties
-
 # AWS User-specific
 .idea/**/aws.xml
 
@@ -164,5 +161,13 @@ buildNumber.properties
 
 #Ignore .curl script
 *.bat
+
+#Ignore .properties file with sensitive information
+src/main/resources/config.properties
+
+#Ignore docx, xlsx and the specification pdf
+*.docx
+*.xlsx
+*specification.pdf
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,java,maven
